Trying to fix the build for JDK 11.