@@ -1,6 +1,5 @@
 package com.basaki.classloader;
 
-import java.io.IOException;
 import org.apache.commons.codec.DecoderException;
 import org.apache.commons.codec.binary.Hex;
 import org.junit.Test;
@@ -38,7 +37,7 @@ public class LoadingBookFromBinaryArrayTest {
     }
 
     @Test(expected = ClassFormatError.class)
-    public void testLoadingClassWithIncorrectCorrectMagicNumber() throws IllegalAccessException, InstantiationException, DecoderException {
+    public void testLoadingClassWithIncorrectCorrectMagicNumber() throws DecoderException {
         byte[] bytes = java.util.Base64.getUrlDecoder().decode(BOOK_CLAZZ);
 
         String hex8 = Hex.encodeHexString(bytes);
@@ -56,23 +55,35 @@ public class LoadingBookFromBinaryArrayTest {
     }
 
     @Test
-    public void testLoadingBookV6() throws IOException, IllegalAccessException, InstantiationException {
-        String bookClazz =
-                "yv66vgAAADIAHQoABQAYCQAEABkJAAQAGgcAGwcAHAEABXRpdGxlAQASTGphdmEvbGFuZy9TdHJp\n" +
-                        "bmc7AQAGYXV0aG9yAQAGPGluaXQ+AQADKClWAQAEQ29kZQEAD0xpbmVOdW1iZXJUYWJsZQEAEkxv\n" +
-                        "Y2FsVmFyaWFibGVUYWJsZQEABHRoaXMBABdMY29tL2Jhc2FraS9tb2RlbC9Cb29rOwEACGdldFRp\n" +
-                        "dGxlAQAUKClMamF2YS9sYW5nL1N0cmluZzsBAAhzZXRUaXRsZQEAFShMamF2YS9sYW5nL1N0cmlu\n" +
-                        "ZzspVgEACWdldEF1dGhvcgEACXNldEF1dGhvcgEAClNvdXJjZUZpbGUBAAlCb29rLmphdmEMAAkA\n" +
-                        "CgwABgAHDAAIAAcBABVjb20vYmFzYWtpL21vZGVsL0Jvb2sBABBqYXZhL2xhbmcvT2JqZWN0ACEA\n" +
-                        "BAAFAAAAAgACAAYABwAAAAIACAAHAAAABQABAAkACgABAAsAAAAvAAEAAQAAAAUqtwABsQAAAAIA\n" +
-                        "DAAAAAYAAQAAAAMADQAAAAwAAQAAAAUADgAPAAAAAQAQABEAAQALAAAALwABAAEAAAAFKrQAArAA\n" +
-                        "AAACAAwAAAAGAAEAAAAJAA0AAAAMAAEAAAAFAA4ADwAAAAEAEgATAAEACwAAAD4AAgACAAAABior\n" +
-                        "tQACsQAAAAIADAAAAAoAAgAAAA0ABQAOAA0AAAAWAAIAAAAGAA4ADwAAAAAABgAGAAcAAQABABQA\n" +
-                        "EQABAAsAAAAvAAEAAQAAAAUqtAADsAAAAAIADAAAAAYAAQAAABEADQAAAAwAAQAAAAUADgAPAAAA\n" +
-                        "AQAVABMAAQALAAAAPgACAAIAAAAGKiu1AAOxAAAAAgAMAAAACgACAAAAFQAFABYADQAAABYAAgAA\n" +
-                        "AAYADgAPAAAAAAAGAAgABwABAAEAFgAAAAIAFw==";
+    public void testLoadingBookV6() throws IllegalAccessException, InstantiationException {
+//        String bookClazz =
+//                "yv66vgAAADIAHQoABQAYCQAEABkJAAQAGgcAGwcAHAEABXRpdGxlAQASTGphdmEvbGFuZy9TdHJp\n" +
+//                        "bmc7AQAGYXV0aG9yAQAGPGluaXQ+AQADKClWAQAEQ29kZQEAD0xpbmVOdW1iZXJUYWJsZQEAEkxv\n" +
+//                        "Y2FsVmFyaWFibGVUYWJsZQEABHRoaXMBABdMY29tL2Jhc2FraS9tb2RlbC9Cb29rOwEACGdldFRp\n" +
+//                        "dGxlAQAUKClMamF2YS9sYW5nL1N0cmluZzsBAAhzZXRUaXRsZQEAFShMamF2YS9sYW5nL1N0cmlu\n" +
+//                        "ZzspVgEACWdldEF1dGhvcgEACXNldEF1dGhvcgEAClNvdXJjZUZpbGUBAAlCb29rLmphdmEMAAkA\n" +
+//                        "CgwABgAHDAAIAAcBABVjb20vYmFzYWtpL21vZGVsL0Jvb2sBABBqYXZhL2xhbmcvT2JqZWN0ACEA\n" +
+//                        "BAAFAAAAAgACAAYABwAAAAIACAAHAAAABQABAAkACgABAAsAAAAvAAEAAQAAAAUqtwABsQAAAAIA\n" +
+//                        "DAAAAAYAAQAAAAMADQAAAAwAAQAAAAUADgAPAAAAAQAQABEAAQALAAAALwABAAEAAAAFKrQAArAA\n" +
+//                        "AAACAAwAAAAGAAEAAAAJAA0AAAAMAAEAAAAFAA4ADwAAAAEAEgATAAEACwAAAD4AAgACAAAABior\n" +
+//                        "tQACsQAAAAIADAAAAAoAAgAAAA0ABQAOAA0AAAAWAAIAAAAGAA4ADwAAAAAABgAGAAcAAQABABQA\n" +
+//                        "EQABAAsAAAAvAAEAAQAAAAUqtAADsAAAAAIADAAAAAYAAQAAABEADQAAAAwAAQAAAAUADgAPAAAA\n" +
+//                        "AQAVABMAAQALAAAAPgACAAIAAAAGKiu1AAOxAAAAAgAMAAAACgACAAAAFQAFABYADQAAABYAAgAA\n" +
+//                        "AAYADgAPAAAAAAAGAAgABwABAAEAFgAAAAIAFw==";
+        String bookClazz = "yv66vgAAADIAHQoABQAYCQAEABkJAAQAGgcAGwcAHAEABXRpdGxlAQASTGphdmEvbGFuZy9TdHJpbmc" +
+                "7AQAGYXV0aG9yAQAGPGluaXQ+AQADKClWAQAEQ29kZQEAD0xpbmVOdW1iZXJUYWJsZQEAEkxvY2FsVmFyaWFibGVUYW" +
+                "JsZQEABHRoaXMBABdMY29tL2Jhc2FraS9tb2RlbC9Cb29rOwEACGdldFRpdGxlAQAUKClMamF2YS9sYW5nL1N0cmluZ" +
+                "zsBAAhzZXRUaXRsZQEAFShMamF2YS9sYW5nL1N0cmluZzspVgEACWdldEF1dGhvcgEACXNldEF1dGhvcgEAClNvdXJj" +
+                "ZUZpbGUBAAlCb29rLmphdmEMAAkACgwABgAHDAAIAAcBABVjb20vYmFzYWtpL21vZGVsL0Jvb2sBABBqYXZhL2xhbmc" +
+                "vT2JqZWN0ACEABAAFAAAAAgACAAYABwAAAAIACAAHAAAABQABAAkACgABAAsAAAAvAAEAAQAAAAUqtwABsQAAAAIADAA" +
+                "AAAYAAQAAAAMADQAAAAwAAQAAAAUADgAPAAAAAQAQABEAAQALAAAALwABAAEAAAAFKrQAArAAAAACAAwAAAAGAAEAAAAJ" +
+                "AA0AAAAMAAEAAAAFAA4ADwAAAAEAEgATAAEACwAAAD4AAgACAAAABiortQACsQAAAAIADAAAAAoAAgAAAA0ABQAOAA0AA" +
+                "AAWAAIAAAAGAA4ADwAAAAAABgAGAAcAAQABABQAEQABAAsAAAAvAAEAAQAAAAUqtAADsAAAAAIADAAAAAYAAQAAABEADQ" +
+                "AAAAwAAQAAAAUADgAPAAAAAQAVABMAAQALAAAAPgACAAIAAAAGKiu1AAOxAAAAAgAMAAAACgACAAAAFQAFABYADQAAABYA" +
+                "AgAAAAYADgAPAAAAAAAGAAgABwABAAEAFgAAAAIAFw==";
 
-        byte[] bytes = new sun.misc.BASE64Decoder().decodeBuffer(bookClazz);
+        //byte[] bytes = new sun.misc.BASE64Decoder().decodeBuffer(bookClazz);
+        byte[] bytes = java.util.Base64.getDecoder().decode(bookClazz);
         MyCustomClassLoader ccl = new MyCustomClassLoader();
         Class cz = ccl.loadCustomClass("com.basaki.model.Book", bytes);
         System.out.println(cz);
